# code4edutech

./: .replit  DEPLOYMENT_GUIDE.md  LOCAL_SETUP_GUIDE.md  PROJECT_ARCHITECTURE.md  app.py  auth.py  batch_processor.py  dashboard.py  database.py  database_postgres.py  nlp_processor.py  pyproject.toml  replit.md  resume_evaluation.db  scoring_engine.py  text_extractor.py  utils.py
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted-Problem-Statement-At-Innomatics-Research-Labs-resume-evaluation-is-currently-manual-inconsistent--1758348253220_1758348253221.txt
test_files/: sample_resume.txt
