[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "docx>=0.2.4",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.38.0",
    "numpy>=2.3.3",
    "openai>=1.108.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "streamlit>=1.49.1",
]
